Alt funskjonelt ferdig, bare design og engelsk versjon som gjenstår

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,17 +10,19 @@
     <string name="btn6">Ø</string>
     <string name="btn7">S</string>
 
+
     <string name="edUserInput">Skriv inn ord</string>
     <string name="answersLeft">Antall svar som gjenstår:</string>
 
     <string name="tvAlert4Ord">Ordet ditt må inneholde minst 4 bokstaver!</string>
     <string name="tvAlertWrongWord">Ordet ditt er ikke riktig, prøv igjen!</string>
-    <string name="tvAlertKeyLetter">Ordet ditt må inneholde!<b>S</b></string>
+    <string name="tvAlertKeyLetter">Ordet ditt må inneholde! <b>S</b></string>
     <string name="tvAlertAllerdyUsed">Du har allrede skrevet dette ordet!</string>
 
     <string name="btnCheck">Sjekk</string>
     <string name="btnHint">Hint</string>
     <string name="btnDelete">Slett</string>
+    <string name="btnAnswers">Fasit</string>
 
     <string name="tvCorrectAnswerHeader">Riktige svar: </string>
 </resources>
